logs/dag_id=0_Employee_Sync/run_id=manual__2023-03-16T18:33:05.907388+00:00/task_id=db_setup/attempt=1.log
[2023-03-16T18:33:06.928+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: 0_Employee_Sync.db_setup manual__2023-03-16T18:33:05.907388+00:00 [queued]>
[2023-03-16T18:33:06.935+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: 0_Employee_Sync.db_setup manual__2023-03-16T18:33:05.907388+00:00 [queued]>
[2023-03-16T18:33:06.936+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2023-03-16T18:33:06.936+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 1
[2023-03-16T18:33:06.937+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2023-03-16T18:33:06.947+0000] {taskinstance.py:1383} INFO - Executing <Task(_PythonDecoratedOperator): db_setup> on 2023-03-16 18:33:05.907388+00:00
[2023-03-16T18:33:06.954+0000] {standard_task_runner.py:55} INFO - Started process 44671 to run task
[2023-03-16T18:33:06.958+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', '0_Employee_Sync', 'db_setup', 'manual__2023-03-16T18:33:05.907388+00:00', '--job-id', '59', '--raw', '--subdir', 'DAGS_FOLDER/test_dag.py', '--cfg-path', '/tmp/tmpub0so6vx']
[2023-03-16T18:33:06.960+0000] {standard_task_runner.py:83} INFO - Job 59: Subtask db_setup
[2023-03-16T18:33:07.018+0000] {task_command.py:376} INFO - Running <TaskInstance: 0_Employee_Sync.db_setup manual__2023-03-16T18:33:05.907388+00:00 [running]> on host 9fe6516b8a01
[2023-03-16T18:33:07.066+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=0_Employee_Sync
AIRFLOW_CTX_TASK_ID=db_setup
AIRFLOW_CTX_EXECUTION_DATE=2023-03-16T18:33:05.907388+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-03-16T18:33:05.907388+00:00
[2023-03-16T18:33:07.068+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/decorators/base.py", line 188, in execute
    return_value = super().execute(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 175, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 193, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/test_dag.py", line 91, in db_setup
    )""")
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 3:         )
                ^

[2023-03-16T18:33:07.078+0000] {taskinstance.py:1406} INFO - Marking task as FAILED. dag_id=0_Employee_Sync, task_id=db_setup, execution_date=20230316T183305, start_date=20230316T183306, end_date=20230316T183307
[2023-03-16T18:33:07.085+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 59 for task db_setup (syntax error at or near ")"
LINE 3:         )
                ^
; 44671)
[2023-03-16T18:33:07.133+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2023-03-16T18:33:07.154+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
